# french_cards_detector_pytorch

./: .dockerignore  .gitignore  CLAUDE.md  CLOUD_TRAINING.md  Dockerfile  Makefile  README.md  create_notebook.py  data.yaml  docker-compose.yml  eda.ipynb  evaluation.ipynb  kaggle_training.ipynb  notebook.ipynb  pipeline.py  predict.py  pyproject.toml  requirements.txt  train.py  train_custom.py  tuning.ipynb  verify_ingestion.py  visualize_augmentations.ipynb  yolo_training_pipeline.ipynb
.claude/: settings.local.json
.github/workflows/: ci.yml
data_ingestion/: create_reduced_dataset.py  unify_datasets.py
deployment_hf/: README.md  app.py  requirements.txt
notebooks/: evaluation.ipynb  visualize_augmentations.ipynb
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
scripts/: create_balanced_subset.py  evaluate_model.py  notebook_eval.py  pipeline.py  predict.py  train_custom.py  train_fast.py  verify_ingestion.py
src/: dataset.py  freezing_engine.py  head_replacer.py  layer_analyzer.py  optimizer_factory.py  trainer.py  utils.py
tests/: integration_test.py  test_predict.py  test_structure.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_head_replacer.py
